--- a/locales/de.json
+++ b/locales/de.json
@@ -1,6 +1,3 @@
 {
-	"@metadata": {
-		"authors": []
-	},
-	"ep_markdown.showMarkdown": "Afficher en markdown"
+  "ep_markdown.showMarkdown" : "Markdown anzeigen"
 }
